--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -891,8 +891,7 @@
         preferences.check_sets = document.getElementById("sets_box").checked;
         preferences.check_maxrep = document.getElementById("max_rep_box").checked;
         preferences.check_simple_view = document.getElementById('simplify-ui').checked;
-        preferences.check_chart_type  = document.getElementById('chart-type').checked;;
-        
+        preferences.check_chart_type  = document.getElementById('chart-type').checked;        
 
         preferences.mul_weight = document.getElementById('weight-slider').value;
         preferences.mul_reps = document.getElementById('reps-slider').value;
