--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -468,6 +468,8 @@
 
     function append_combo(json_base_exs)
     {
+        console.log(json_base_exs);
+
         var json = JSON.parse(json_base_exs);
         var exercises = document.getElementById('select');
 
@@ -892,6 +894,7 @@
         preferences.check_maxrep = document.getElementById("max_rep_box").checked;
         preferences.check_simple_view = document.getElementById('simplify-ui').checked;
         preferences.check_chart_type  = document.getElementById('chart-type').checked;        
+        preferences.check_dialog_save = "ignore";     
 
         preferences.mul_weight = document.getElementById('weight-slider').value;
         preferences.mul_reps = document.getElementById('reps-slider').value;
