--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -1078,9 +1078,14 @@
     {
         var footer = '';
 
+        if(message.includes('backend') && message.includes('unavailable'))
+            footer += '<button onclick="location.reload()">Reload the Page!</button><br>';
+
         if(type == 'error')
-            footer = '<a href="https://github.com/jkbngl/trainingsplan/issues/new">If you think this is not correct please open a github issue!</a>'
+            footer += '<a href="https://github.com/jkbngl/trainingsplan/issues/new">If you think this is not correct please open a github issue!</a>'
         
+        console.log(footer);
+
         Swal.fire({
           type: type,
           title: title,
