--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@1/dark.css">
+
 
 
 
@@ -70,8 +72,6 @@
             var available_ex = get_available_ex();            
             append_combo(available_ex);
             data = append_preferences();
-
-            console.log(data);
 
             if(data.check_chart_type == 'f' /* || typeof data.check_chart_type == 'undefined'*/)
             {
@@ -360,30 +360,6 @@
             chart.update();
         }
         
-    }
-
-    function display_alert()
-    {
-        bootbox.prompt({
-            title: "This is a prompt with a set of checkbox inputs!",
-            value: ['1', '3'],
-            inputType: 'checkbox',
-            inputOptions: [{
-                text: 'Choice One',
-                value: '1',
-            },
-            {
-                text: 'Choice Two',
-                value: '2',
-            },
-            {
-                text: 'Choice Three',
-                value: '3',
-            }],
-            callback: function (result) {
-                console.log(result);
-            }
-        });
     }
 
     function reset_settings()
@@ -757,7 +733,7 @@
             var json = JSON.parse(values);
 
             document.getElementById("additional-info").innerHTML = document.getElementById("additional-info").innerHTML + '<button id="' + json.base_ex + '" class="button" style="top: 10px; width:80%; margin-left: 10%;">' + ex_name + '</button>'
-            document.getElementById(json.base_ex).setAttribute( "onClick", "Swal.fire('" + parse_base_ex(values, ex_name) + "')");
+            document.getElementById(json.base_ex).setAttribute( "onClick", "Swal.fire('" + parse_base_ex(values, ex_name) + "');");
         }
     }
 
