--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,7 +79,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@1/dark.css">
     <script src="http://jakob.ml:8081/auth/js/keycloak.js"></script> 
     <script>
@@ -421,7 +421,7 @@
         catch(err) {
             console.log("error");
             
-            display_error('error', 'The backend seems to be unavailable!');
+            display_error('error', 'Oops...', 'The backend seems to be unavailable!');
         }
     }
 
@@ -1371,16 +1371,25 @@
 
     function display_error(type, title, message)
     {
-        var footer = '';
+        var footer = '<hr style="height: 2px; background-color:#666;"><br>';
+
+        console.log(message);
+
+        if(message.includes('backend') && message.includes('unavailable'))
+            footer += '<a href onclick="location.reload()">Reload the Page!</button><br>';
 
         if(type == 'error')
-            footer = '<a href="https://github.com/jkbngl/trainingsplan/issues/new">If you think this is not correct please open a github issue!</a>'
+            footer += '<a href="https://github.com/jkbngl/trainingsplan/issues/new">If you think this is not correct please open a github issue!</a>'
         
+        footer += '<br><br><hr style="height: 2px; background-color:#666;"><br>';
+
+        console.log(footer);
+
         Swal.fire({
           type: type,
           title: title,
           text: message,
-          footer: footer
+          html: footer
         })
     }
 
