#57 added legend back to top
was moved to bottom as part of my investigation

--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -1017,7 +1017,7 @@
                 },
                 legend: {
                     display: true,
-                    position: 'bottom',
+                    //position: 'bottom',
                     labels: {
                         fontSize: 20
                     }
