--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -57,6 +57,15 @@
         document.addEventListener('DOMContentLoaded',function(){
             try
             {
+                swal.fire({
+                    title: 'Loading your data...',
+                    allowEscapeKey: false,
+                    allowOutsideClick: false,
+                    onOpen: () => {
+                      swal.showLoading();
+                    }
+                });
+
                 keycloak = Keycloak();
 
                 keycloak.init({ onLoad: 'login-required' })
@@ -72,6 +81,7 @@
 
                 keycloak.onAuthSuccess = function() 
                 { 
+                    swal.close();
                     // alert('Successfully authenticated'); 
                     console.log('Successfully authenticated'); 
                 
