#62 changed sequence of colors

--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -931,12 +931,21 @@
     }
 
     var labels = [1,2,3,4,5,6,7,8];
-    var border_color_array = ["#00ad5f", "#E3170A", "#F7B32B", "#4b081a", "#f63f01", "#777777", "#8980F5", "#102542", "#0EB1D2", "#41658A", "#1A3A3A"];
+    var border_color_array = [ "#00ad5f" // green
+                             , "#E3170A" // burning red
+                             , "#102542" // dark blue
+                             , "#F7B32B" // yellow
+                             , "#41658A" // darker light blue
+                             , "#4b081a" // bordeaux red
+                             , "#0EB1D2" // very light blue
+                             , "#f63f01" // orange
+                             , "#1A3A3A" // dark blue 
+                             ];
+
     var ex_names = ["kniebeuge", "bankdruecken", "seitheben", "latzug"];
 
     function get_chart_type()
     {
-
         return "line";
     }
 
