--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -931,15 +931,15 @@
     }
 
     var labels = [1,2,3,4,5,6,7,8];
-    var border_color_array = [ "#00ad5f" // green
-                             , "#E3170A" // burning red
+    var border_color_array = [ "#1ece5c" // green
+                             , "#BD000A" // burning red
                              , "#102542" // dark blue
                              , "#F7B32B" // yellow
                              , "#41658A" // darker light blue
                              , "#4b081a" // bordeaux red
                              , "#0EB1D2" // very light blue
                              , "#f63f01" // orange
-                             , "#1A3A3A" // dark blue 
+                             , "#0D1321" // dark blue 
                              ];
 
     var ex_names = ["kniebeuge", "bankdruecken", "seitheben", "latzug"];
