#62 added white instead of strange blue

--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -935,9 +935,9 @@
                              , "#BD000A" // burning red
                              , "#102542" // dark blue
                              , "#F7B32B" // yellow
-                             , "#41658A" // darker light blue
-                             , "#4b081a" // bordeaux red
                              , "#0EB1D2" // very light blue
+                             , "#4b081a" // bordeaux red
+                             , "#F9F7F3" // darker light blue
                              , "#f63f01" // orange
                              , "#0D1321" // dark blue 
                              ];
